<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.AccountMenu">

    <Button
        android:id="@+id/transferOtherAccButton3"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/contrast_background"
        android:onClick="setTransferOtherAccButton"
        android:text="@string/transfer_to_someone_else_account"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transferOwnAccButton"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/resetPassButton"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/contrast_background"
        android:onClick="setResetPassButton"
        android:text="@string/reset_password"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payBillsButton"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/payBillsButton"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/contrast_background"
        android:onClick="setPayBillsButton"
        android:text="@string/pay_bills"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewAccButton"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/transferOwnAccButton"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/contrast_background"
        android:onClick="setTransferOwnAccButton"
        android:text="@string/transfer_between_my_accounts"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountsButton"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/createNewAccButton"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/contrast_background"
        android:onClick="setCreateNewAccButton"
        android:text="@string/create_a_new_account"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transferOtherAccButton3"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/accountsButton"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/contrast_background"
        android:onClick="seeAccounts"
        android:text="@string/view_accounts"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountOverviewTitle"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/accountOverviewTitle"
        android:layout_width="317dp"
        android:layout_height="34dp"
        android:layout_marginTop="48dp"
        android:text="@string/choose_your_desired_action"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>